# prime_number_finder_backend

./: .coverage  .coveragerc  .env  .env.sample  .flake8  .gitignore  README.md  manage.py  pyproject.toml
.circleci/: config.yml
.ebextensions/: django.config
.elasticbeanstalk/: config.yml
prime/: factories.py  urls.py
prime/migrations/: 0001_initial.py
prime/models/: prime.py
prime/models/tests/: test_prime.py
prime/utils/: math.py
prime/utils/tests/: test_math.py
prime/views/: prime_view.py
prime/views/tests/: test_prime_view.py
prime_number_finder_backend/: asgi.py  settings.py  urls.py  wsgi.py
prime_number_finder_backend/utils/tests/: test_math.py
